--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -102,7 +102,18 @@ body.offsetopened {
   max-width: none;
   padding-left: 0;
   padding-right: 0;
-  width: 100%;
+}
+.ms-grid.full-mobile {
+  max-width: none;
+  padding-left: 0;
+  padding-right: 0;
+}
+@media all and (min-width: 768px) {
+  .ms-grid.full-mobile {
+    max-width: 1600px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
 }
 .ms-grid.fixed .ms-row {
   margin-left: -2px;
