full width bug fix. removing full-mobile

--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -36,17 +36,8 @@
         max-width: none;
         padding-left: 0;
         padding-right: 0;
-    }
-
-    &.full-mobile {
-        max-width: none;
-        padding-left: 0;
-        padding-right: 0;
-        @media all and (min-width: $vp3) {
-            max-width: $max-grid-width;
-            padding-left: 12px;
-            padding-right: 12px;
-        }
+        width: 100%;
+        overflow-x: hidden;
     }
 
 
