--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -102,18 +102,8 @@ body.offsetopened {
   max-width: none;
   padding-left: 0;
   padding-right: 0;
-}
-.ms-grid.full-mobile {
-  max-width: none;
-  padding-left: 0;
-  padding-right: 0;
-}
-@media all and (min-width: 768px) {
-  .ms-grid.full-mobile {
-    max-width: 1600px;
-    padding-left: 12px;
-    padding-right: 12px;
-  }
+  width: 100%;
+  overflow-x: hidden;
 }
 .ms-grid.fixed .ms-row {
   margin-left: -2px;
