--- a/demo/sass/demo.scss
+++ b/demo/sass/demo.scss
@@ -8,6 +8,26 @@
 	margin-bottom: 1em;
 }
 
+.spartan-layout {
+	.filler {
+		height: 25em;
+
+		&.tall {
+			height: 150em;
+		}
+
+		&.short {
+			height: 10em;
+		}
+	}
+
+	.vert {
+		.col-1-3 {
+			margin-bottom: 1em;
+		}
+	}
+}
+
 .complex-layouts {
 	margin-bottom: 1em;
 
