--- a/demo/sass/demo.scss
+++ b/demo/sass/demo.scss
@@ -8,6 +8,14 @@
 	margin-bottom: 1em;
 }
 
+.md-height {
+	height: 5em;
+}
+
+.lg-height {
+	height: 10em;
+}
+
 .spartan-layout {
 	.filler {
 		height: 25em;
