--- a/src/sass/_column-ordering.scss
+++ b/src/sass/_column-ordering.scss
@@ -1,27 +1,25 @@
-@mixin pull($vp, $vpprefix, $vpcolumns, $total){
+@mixin pull($vp, $vpprefix, $total){
     @media screen and (min-width: $vp) {
-        $ratio: $total / $vpcolumns;
-        @for $i from 1 to $vpcolumns {
+        @for $i from 1 to $total {
             .#{$vpprefix}-col-#{$total}-pull-#{$i} {
-                #{$right}: percentage(($i*$ratio) / $total);
+                #{$right}: percentage($i / $total);
                 #{$left}: auto;
             }
 
-            @include if-mixed(".#{$vpprefix}-col-#{$total}-pull-#{$i}", (#{$right}, percentage(($i*$ratio) / $total)), (#{$left}, auto));
+            @include if-mixed(".#{$vpprefix}-col-#{$total}-pull-#{$i}", (#{$right}, percentage($i / $total)), (#{$left}, auto));
         }
     }
 }
 
-@mixin push($vp, $vpprefix, $vpcolumns, $total){
+@mixin push($vp, $vpprefix, $total){
     @media screen and (min-width: $vp) {
-        $ratio: $total / $vpcolumns;
-        @for $i from 1 to $vpcolumns {
+        @for $i from 1 to $total {
             .#{$vpprefix}-col-#{$total}-push-#{$i} {
-                #{$left}: percentage(($i*$ratio) / $total);
+                #{$left}: percentage($i / $total);
                 #{$right}: auto;
             }
 
-            @include if-mixed(".#{$vpprefix}-col-#{$total}-push-#{$i}", (#{$left}, percentage(($i*$ratio) / $total)), (#{$right}, auto));
+            @include if-mixed(".#{$vpprefix}-col-#{$total}-push-#{$i}", (#{$left}, percentage($i / $total)), (#{$right}, auto));
         }
     }
 }
@@ -29,8 +27,8 @@
 @each $columnCount, $column-breakdown in $columns {
 
 	@for $i from 1 through length($column-breakdown) {
-        @include push(nth($vp-list, $i), nth($vp-prefix-list, $i), nth($column-breakdown, $i), $columnCount);
-        @include pull(nth($vp-list, $i), nth($vp-prefix-list, $i), nth($column-breakdown, $i), $columnCount);
+        @include push(nth($vp-list, $i), nth($vp-prefix-list, $i), $columnCount);
+        @include pull(nth($vp-list, $i), nth($vp-prefix-list, $i), $columnCount);
 	}
 
 }
