--- a/src/sass/_offsets.scss
+++ b/src/sass/_offsets.scss
@@ -1,21 +1,19 @@
-@mixin offsets($vp, $vpprefix, $vpcolumns, $total){
-    @if $vpcolumns > 1 {
+@mixin offsets($vp, $vpprefix, $total){
         @media screen and (min-width: $vp) {
-            @for $i from 0 to $vpcolumns {
+            @for $i from 0 to $total {
                 .#{$vpprefix}-col-#{$total}-offset-#{$i} {
-                    margin-#{$left}: percentage($i / $vpcolumns);
+                    margin-#{$left}: percentage($i / $total);
                 }
-                @include if-mixed(".#{$vpprefix}-col-#{$total}-offset-#{$i}", (margin-#{$left}, percentage($i / $vpcolumns)), (margin-#{$right}, 0));
+                @include if-mixed(".#{$vpprefix}-col-#{$total}-offset-#{$i}", (margin-#{$left}, percentage($i / $total)), (margin-#{$right}, 0));
             }
         }
-    }
 }
 
 
 @each $columnCount, $column-breakdown in $columns {
 
     @for $i from 1 through length($column-breakdown) {
-        @include offsets(nth($vp-list, $i), nth($vp-prefix-list, $i), nth($column-breakdown, $i), $columnCount);
+        @include offsets(nth($vp-list, $i), nth($vp-prefix-list, $i), $columnCount);
     }
     
 }
