--- a/src/sass/_manual-colspans.scss
+++ b/src/sass/_manual-colspans.scss
@@ -8,8 +8,28 @@
     }
 }
 
-@each $columnCount, $column-breakdown in $columns {
-	@for $i from 1 through length($vp-prefix-list) {
-	    @include manual-colspans(nth($vp-list, $i), nth($vp-prefix-list, $i), $columnCount);
-	}
+@mixin manual-colspans-auto($vp, $vpprefix, $vpcolumns, $total){
+    @media screen and (min-width: $vp) {
+        $ratio: $total / $vpcolumns;
+        @for $i from 1 through $vpcolumns {
+            .#{$vpprefix}-col-#{$i}-#{$total} {
+                width: percentage(($i*$ratio) / $total);
+            }
+        }
+    }
+}
+
+
+@if $honorAutoColumnBreakdown {
+    @each $columnCount, $column-breakdown in $columns {
+        @for $i from 1 through length($column-breakdown) {
+            @include manual-colspans-auto(nth($vp-list, $i), nth($vp-prefix-list, $i), nth($column-breakdown, $i), $columnCount);
+        }
+    }
+} @else {
+    @each $columnCount, $column-breakdown in $columns {
+        @for $i from 1 through length($vp-prefix-list) {
+            @include manual-colspans(nth($vp-list, $i), nth($vp-prefix-list, $i), $columnCount);
+        }
+    }
 }
