--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -107,65 +107,7 @@
 //------------------------------------
 //          #MOBILE FIRST SIZES
 //------------------------------------
-.col-1-3.nb, .col-2-6.nb {
-    width: percentage(1 / 3);
-}
-
-.col-2-3.nb, .col-4-6.nb {
-    width: percentage(2 / 3);
-}
-
-.col-1-2.nb,
-.col-2-4.nb,
-.col-3-6.nb,
-.col-1-8,
-.col-1-12 {
-    width: percentage(1 / 2);
-}
-
-.col-1-4.nb {
-    width: percentage(1 / 4);
-}
-
-.col-3-4.nb {
-    width: percentage(3 / 4);
-}
-
-.col-1-5.nb {
-    width: percentage(1 / 5);
-}
-
-.col-1-6.nb,
-.col-1-24 {
-    width: percentage(1 / 6);
-}
-
-.col-1-8.nb {
-    width: percentage(1 / 8);
-}
-
-.col-1-12.nb {
-    width: percentage(1 / 12);
-}
-
-.col-1-24.nb {
-    width: percentage(1 / 24);
-}
-
-.col-2-8,
-.col-2-12,
-.col-4-12,
-.col-2-2,
-.col-3-3,
-.col-4-4,
-.col-5-5,
-.col-6-6,
-.col-8-8,
-.col-12-12,
-.col-24-24 {
-    width: percentage(1);
-}
-
+@import "mobile-first";
 
 
 
@@ -173,7 +115,7 @@
 //----------------------------------------------------
 //          #MEDIA QUERIES FOR AUTOMATIC RWD OPTION
 //----------------------------------------------------
-@import "automaticRWD";
+@import "automatic-rwd";
 
 
 
