--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -33,10 +33,14 @@
     padding-right: 12px;
 
     //Import of grid helpers like fixed col and zero margin col options
-    @import "grid-helpers";
+    @if $includeGridHelpers {
+        @import "grid-helpers";
+    }
 
     //Import of row helpers like fixed col and zero margin col options to be put on an individual row
-    @import "row-helpers";
+    @if $includeRowHelpers {
+        @import "row-helpers";
+    }
 }
 
 
@@ -120,8 +124,18 @@
 
 
 
+@if $includeManualColspans {
+    @import "manual-colspans";
+}
 
-@import "manual-colspans";
-@import "offsets";
-@import "column-ordering";
-@import "visibility";
+@if $includeOffsets {
+    @import "offsets";
+}
+
+@if $includePushPull {
+    @import "column-ordering";
+}
+
+@if $includeVisibility {
+    @import "visibility";
+}
