--- a/src/sass/mscom-grid.scss
+++ b/src/sass/mscom-grid.scss
@@ -124,6 +124,10 @@
 
 
 
+
+//----------------------------------------------------
+//          #GRID FEATURE IMPORTS
+//----------------------------------------------------
 @if $includeManualColspans {
     @import "manual-colspans";
 }
